[tool.poetry]
name = "promptwithoptions"
version = "0.1.0"
description = "Input for command line questions with options"
authors = ["silkyanteater <cyclopesrufus@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
