[tool.poetry]
name = "promptwithoptions"
version = "0.9.9"
description = "Input for command line questions with options"
authors = ["silkyanteater <cyclopesrufus@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/silkyanteater/promptwithoptions"
keywords = ["command line", "input", "options"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
